[package]
name = "secret_account_test"
version = "0.1.0"

[dependencies]
eng-wasm = "0.1"
eng-wasm-derive = "0.1"
serde = "1.0.84"
hex = "0.4.0"
rustc-hex = "2.0.1"
enigma-crypto = { path = "enigma-core/enigma-crypto", features = ["asymmetric", "hash"] }

[profile.release]           # The release profile, used for `cargo build --release`.
panic = "abort"             # panic strategy (`-C panic=...`)
lto = true                  # Link Time Optimization usually reduces size of binaries
                            # and static libraries. Increases compilation time.
                            # If true, passes `-C lto` flag to the compiler
opt-level = "z"  